# bezier

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  GeometryEngine.cpp  GeometryEngine.h  MainOpenGLWidget.cpp  MainOpenGLWidget.h  MainWindow.cpp  MainWindow.h  Mode.h  README.md  VirtualBall.cpp  VirtualBall.h  bezier.cpp  bezier.h  camera.cpp  camera.h  main.cpp  res.qrc
shader/: bezier.geom  fragment.frag  vertex.vert
